--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,6 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Mp886
+  description: Policy-as-Code, Enforcing S3 Bucket Versioning.
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
